--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "signer-wasm/ledger-filecoin-js"]
 	path = signer-wasm/ledger-filecoin-js
-	url = git@github.com:Zondax/ledger-filecoin-js.git
+	url = https://github.com/Zondax/ledger-filecoin-js.git
