--- a/examples/wasm_node/package.json
+++ b/examples/wasm_node/package.json
@@ -6,7 +6,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "test:ledger": "mocha test/test.ledger.js",
+    "test:spec": "mocha test/test.spec.js",
+    "test:legacy": "mocha test/test.legacy.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +22,7 @@
     "filecoin"
   ],
   "dependencies": {
+    "@zondax/filecoin-signer": "../../signer-wasm/",
     "bip39": "^3.0.2"
   },
   "devDependencies": {
