--- a/signer-wasm/package.json
+++ b/signer-wasm/package.json
@@ -15,7 +15,8 @@
     "build": "babel lib --out-dir dist"
   },
   "dependencies": {
-    "@zondax/ledger-filecoin": "file:./ledger-filecoin-js",
+    "@babel/runtime": "^7.9.2",
+    "@ledgerhq/hw-transport-node-hid": "^5.12.0",
     "@zondax/filecoin-signer-wasm": "file:./pkg"
   },
   "devDependencies": {
@@ -23,7 +24,10 @@
     "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.7",
     "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "@babel/runtime": "^7.9.2"
-  }
+    "@babel/preset-env": "^7.9.0"
+  },
+  "moduleDirectories": [
+    "node_modules",
+    "dist"
+  ]
 }
