--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -14,6 +14,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_cbor = "0.11.1"
 
+bls-signatures = "0.5.0"
+
 # Crypto related
 hex = "0.4.2"
 getrandom="0.1.14"
@@ -23,6 +25,11 @@ hmac = "0.7.1"
 zeroize = { version = "1.1", default-features = false, features = ["zeroize_derive"] }
 sha2 = "0.8.1"
 
+
+[dev-dependencies]
+rand_xorshift = "0.2.0"
+rand = "0.7"
+rayon = "1"
 # logging
 log="0.4.8"
 env_logger = "0.7.1"
