--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -26,6 +26,8 @@ zeroize = { version = "1.1", default-features = false, features = ["zeroize_deri
 sha2 = "0.8.1"
 
 
+rayon = "1"
+
 [dev-dependencies]
 rand_xorshift = "0.2.0"
 rand = "0.7"
