--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -8,32 +8,36 @@ repository = "https://github.com/Zondax/filecoin-rs"
 description =""
 
 [dependencies]
-num = { version = "0.2.1", features = ["serde"] }
-thiserror = "1.0.10"
-
+thiserror = "1.0"
 base64 = "0.12.0"
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.45"
+serde_json = "1.0"
 serde_cbor = "0.11.1"
-hex = "0.4.0"
+
+# Crypto related
+hex = "0.4.2"
 getrandom="0.1.14"
-
-vm = { git = "https://github.com/zondax/forest", tag="working" }
-forest_message = { git = "https://github.com/zondax/forest", tag="working" }
-forest_address = { git = "https://github.com/zondax/forest", tag="working" }
-forest_encoding = { git = "https://github.com/zondax/forest", tag="working" }
-num_bigint_chainsafe = { package = "forest_bigint", git = "https://github.com/zondax/forest", tag="working"}
-
-libsecp256k1 = "0.3.4"
+libsecp256k1 = "0.3.5"
 blake2b_simd = "0.5.10"
-tiny-bip39 = "0.7.0"
 hmac = "0.7.1"
 zeroize = { version = "1.1", default-features = false, features = ["zeroize_derive"] }
 sha2 = "0.8.1"
 
+# logging
 log="0.4.8"
 env_logger = "0.7.1"
+
 ffi-support = { optional = true, version = "0.4" }
+
+# TODO: Update once crates are available
+vm = { git = "https://github.com/zondax/forest", tag="working" }
+forest_message = { git = "https://github.com/zondax/forest", tag="working" }
+forest_address = { git = "https://github.com/zondax/forest", tag="working" }
+forest_encoding = { git = "https://github.com/zondax/forest", tag="working" }
+
+# TODO: Maybe we can replace these with something leaner
+tiny-bip39 = "0.7.3"
+num_bigint_chainsafe = { package = "forest_bigint", git = "https://github.com/zondax/forest", tag="working"}
 
 [features]
 with-ffi-support = ["ffi-support"]
