--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -128,7 +128,7 @@ jobs:
       - run:
           name: install node dependencies
           command: |
-            cd examples/jsonrpc
+            cd examples/service_jsonrpc
             yarn install
       - run: ls .circleci
       - run:
@@ -137,7 +137,7 @@ jobs:
       - run:
           name: run jsonrpc tests
           command: |
-            cd examples/jsonrpc
+            cd examples/service_jsonrpc
             yarn run test:unit
             yarn run test:integration
       # No need to save this in cache
