fixing missing lib for chromedriver

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -94,7 +94,7 @@ jobs:
       - checkout
       - run: cargo --version
       - restore-sccache-cache
-      - run: sudo apt-get update && sudo apt-get install -y firefox-esr
+      - run: sudo apt-get update && sudo apt-get install -y firefox-esr libnss3
       - run: make deps_wasm
       # Disabling Chrome (only Firefox) due to  https://github.com/Zondax/filecoin-rs/issues/68
       - run: make test_wasm_unit
