Fix script path

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,7 +86,7 @@ jobs:
       - run: OUT_DIR=/tmp/go ./.circleci/test_go.sh
       - run: OUT_DIR=/tmp/java ./.circleci/test_java.sh
       - run: OUT_DIR=/tmp/kotlin ./.circleci/test_kotlin.sh
-      - run: OUT_DIR=/tmp/objective-c ./.circleci/test_objective-c
+      - run: OUT_DIR=/tmp/objective-c ./.circleci/test_objective-c.sh
       - run: OUT_DIR=/tmp/swift ./.circleci/test_swift.sh
 
   tests_wasm:
