--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -13,6 +13,8 @@ base64 = "0.12.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_cbor = "0.11.1"
+serde_bytes = "0.11.3"
+rayon = "1"
 
 bls-signatures = "0.5.0"
 
@@ -25,13 +27,6 @@ hmac = "0.7.1"
 zeroize = { version = "1.1", default-features = false, features = ["zeroize_derive"] }
 sha2 = "0.8.1"
 
-
-rayon = "1"
-
-[dev-dependencies]
-rand_xorshift = "0.2.0"
-rand = "0.7"
-rayon = "1"
 # logging
 log="0.4.8"
 env_logger = "0.7.1"
@@ -47,6 +42,10 @@ forest_encoding = { git = "https://github.com/zondax/forest", tag="working" }
 # TODO: Maybe we can replace these with something leaner
 tiny-bip39 = "0.7.3"
 num_bigint_chainsafe = { package = "forest_bigint", git = "https://github.com/zondax/forest", tag="working"}
+
+[dev-dependencies]
+rand_xorshift = "0.2.0"
+rand = "0.7"
 
 [features]
 with-ffi-support = ["ffi-support"]
