SUpport BLS in wasm

--- a/signer-wasm/Makefile
+++ b/signer-wasm/Makefile
@@ -1,5 +1,6 @@
 build:
 	cp package-signer-wasm.json pkg/package.json
 	cd ledger-filecoin-js && yarn install && yarn build
+	rm -rf node_modules/
 	yarn install
 	yarn build
