--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -13,6 +13,9 @@ base64 = "0.12.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 serde_cbor = "0.11.1"
+rayon = "1"
+
+bls-signatures = "0.5.0"
 
 # Crypto related
 hex = "0.4.2"
@@ -38,6 +41,10 @@ forest_encoding = { git = "https://github.com/zondax/forest", tag="working" }
 # TODO: Maybe we can replace these with something leaner
 tiny-bip39 = "0.7.3"
 num_bigint_chainsafe = { package = "forest_bigint", git = "https://github.com/zondax/forest", tag="working"}
+
+[dev-dependencies]
+rand_xorshift = "0.2.0"
+rand = "0.7"
 
 [features]
 with-ffi-support = ["ffi-support"]
