--- a/signer-wasm/Cargo.toml
+++ b/signer-wasm/Cargo.toml
@@ -19,6 +19,7 @@ thiserror = "1.0"
 serde_json = "1.0"
 libsecp256k1 = "0.3.5"
 hex = "0.4"
+js-sys = "0.3.37"
 
 getrandom = { version = "0.1.14", features = ["wasm-bindgen"]}
 
@@ -44,4 +45,3 @@ features = ["serde-serialize"]
 
 [dev-dependencies]
 wasm-bindgen-test = "0.2"
-
