--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -105,6 +105,21 @@ jobs:
       #- run: make test_wasm_browser
       # No need to save this in cache
 
+  tests_ledger:
+    docker:
+      - image: zondax/rust-ci:latest
+    steps:
+      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev
+      - checkout
+      - run: cargo --version
+      - restore-sccache-cache
+      - run: sudo apt-get update && sudo apt-get install -y firefox-esr libnss3
+      - run: make deps_wasm
+      # Disabling Chrome (only Firefox) due to  https://github.com/Zondax/filecoin-rs/issues/68
+      - run: make test_wasm_node
+      #- run: make test_wasm_browser
+      # No need to save this in cache
+
   tests_service:
     docker:
       - image: zondax/rust-ci:latest
