--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,6 +114,7 @@ jobs:
     steps:
       - checkout
       - run: git submodule update --init --recursive
+      - run: ls
       - run:
           name: Install node + yarn
           command: |
