--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -130,6 +130,7 @@ jobs:
             nvm install 13.12.0
             nvm use 13.12.0
             npm install -g yarn
+      - run: source $HOME/.cargo/env
       - run: make deps_wasm
       - run:
           name: Run zemu tests
