--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,15 +123,18 @@ jobs:
             rm rustup.sh
       - checkout
       - run: git submodule update --init --recursive
-      - run: ls
       - run:
           name: Install node + yarn
           command: |
             nvm install 13.12.0
             nvm use 13.12.0
             npm install -g yarn
-      - run: source $HOME/.cargo/env
-      - run: make deps_wasm
+      - run:
+          name: Install deps
+          command: |
+            source $HOME/.cargo/env
+            echo $PATH
+            make deps_wasm
       - run:
           name: Run zemu tests
           command: |
