--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ members = [
     "service",
     "signer",
     "signer-ffi",
-    "signer-wasm"
+    "signer-wasm",
+    "ledger"
 ]
 
 [profile.release]
