Remove javscript ledger lib in favor of wasm call;

--- a/examples/wasm_ledger/package.json
+++ b/examples/wasm_ledger/package.json
@@ -9,7 +9,7 @@
     "test:unit": "jest -c jest.config.unit.js --detectOpenHandles",
     "test:ledger": "mocha test/test.ledger.js",
     "test:spec": "mocha test/test.spec.js",
-    "test:legacy": "mocha test/test.legacy.js"
+    "test:legacy": "mocha test/test.ledger.old.js"
   },
   "repository": {
     "type": "git",
