--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -16,15 +16,27 @@ autobenches = false
 name = "ledger_filecoin"
 
 [dependencies]
-#ledger = "0.2.5"
-ledger-generic = { path = "/home/lola/Workspace/Zondax/ledger-generic" }
-async-trait = "0.1.30"
+ledger-generic = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
 quick-error = "1.2.2"
 byteorder = "1.3.1"
 matches = "0.1.8"
 lazy_static = "1.2.0"
 libsecp256k1 = "0.3.5"
 blake2b_simd = "0.5.10"
+futures = "0.3.4"
+serde = { version = "1.0", features = ["derive"] }
+
+# For wasm compiling
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2.60"
+wasm-bindgen-futures = "0.4.10"
+js-sys = "0.3.37"
+
+# For not wasm compilation (native rust) compiling
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+ledger-transport = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
+
+
 
 [dev-dependencies]
 sha2 = "0.8.0"
