--- a/signer-wasm/Cargo.toml
+++ b/signer-wasm/Cargo.toml
@@ -20,6 +20,8 @@ serde_json = "1.0"
 libsecp256k1 = "0.3.5"
 hex = "0.4"
 js-sys = "0.3.37"
+wasm-bindgen-futures = "0.4.10"
+serde = { version = "1.0", features = ["derive"] }
 
 getrandom = { version = "0.1.14", features = ["wasm-bindgen"]}
 
@@ -38,6 +40,10 @@ wee_alloc = { version = "0.4.2", optional = true }
 
 # import filecoin_signer
 filecoin-signer = { path = "../signer" }
+
+# ledger app
+ledger-filecoin = { path = "../ledger" }
+ledger-generic = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
 
 [dependencies.wasm-bindgen]
 version = "^0.2"
