--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -17,7 +17,6 @@ name = "ledger_filecoin"
 
 [dependencies]
 ledger-generic = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
-quick-error = "1.2.2"
 byteorder = "1.3.1"
 matches = "0.1.8"
 lazy_static = "1.2.0"
@@ -25,6 +24,7 @@ libsecp256k1 = "0.3.5"
 blake2b_simd = "0.5.10"
 futures = "0.3.4"
 serde = { version = "1.0", features = ["derive"] }
+thiserror = "1.0.16"
 
 # For wasm compiling
 [target.'cfg(target_arch = "wasm32")'.dependencies]
