--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "ledger-filecoin"
+name = "filecoin-signer-ledger"
 description = "Library to integrate with the Ledger Filecoin app"
 version = "0.10.0"
 license = "Apache-2.0"
@@ -13,7 +13,7 @@ edition     = "2018"
 autobenches = false
 
 [lib]
-name = "ledger_filecoin"
+name = "filecoin_signer_ledger"
 
 [dependencies]
 ledger-generic = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
@@ -36,10 +36,8 @@ js-sys = "0.3.37"
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 ledger-transport = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
 
-
-
 [dev-dependencies]
-sha2 = "0.8.0"
+sha2 = "0.8.1"
 
 [profile.release]
 overflow-checks = true
