Failing with zemu (#135)
* Failing with zemu;

* Working zemu test

* Clean up

* fixing clippy issues

* removing dependency

* restructure code

Co-authored-by: Juan Leni <juan.leni@zondax.ch>
Co-authored-by: Juan Leni <lenijuan@gmail.com>

--- a/signer-wasm/Cargo.toml
+++ b/signer-wasm/Cargo.toml
@@ -42,8 +42,7 @@ wee_alloc = { version = "0.4.2", optional = true }
 filecoin-signer = { path = "../signer" }
 
 # ledger app
-ledger-filecoin = { path = "../ledger" }
-ledger-generic = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
+filecoin-signer-ledger = { path = "../ledger" }
 
 [dependencies.wasm-bindgen]
 version = "^0.2"
