--- a/signer-wasm/Cargo.toml
+++ b/signer-wasm/Cargo.toml
@@ -44,6 +44,9 @@ filecoin-signer = { path = "../signer" }
 # ledger app
 filecoin-signer-ledger = { path = "../ledger" }
 
+# bip44
+bip44 = { path = "../../ledger-rs/bip44"}
+
 [dependencies.wasm-bindgen]
 version = "^0.2"
 features = ["serde-serialize"]
