getting signature to work; importing Buffer type in WASM; exporting signature fields as Buffer;

--- a/signer-wasm/Cargo.toml
+++ b/signer-wasm/Cargo.toml
@@ -45,8 +45,8 @@ filecoin-signer = { path = "../signer" }
 filecoin-signer-ledger = { path = "../ledger" }
 
 # bip44
-#bip44 = { path = "../../ledger-rs/bip44"}
-bip44 = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
+bip44 = { path = "../../ledger-rs/bip44"}
+#bip44 = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
 
 [dependencies.wasm-bindgen]
 version = "^0.2"
