adjust to new API in signer

--- a/signer/Cargo.toml
+++ b/signer/Cargo.toml
@@ -27,20 +27,20 @@ zeroize = { version = "1.1", default-features = false, features = ["zeroize_deri
 sha2 = "0.8.1"
 
 # logging
-log="0.4.8"
-env_logger = "0.7.1"
+log="0.4"
+env_logger = "0.7"
 
 ffi-support = { optional = true, version = "0.4" }
 
 # TODO: Update once crates are available
-vm = { git = "https://github.com/zondax/forest", tag="working" }
-forest_message = { git = "https://github.com/zondax/forest", tag="working" }
-forest_address = { git = "https://github.com/zondax/forest", tag="working" }
-forest_encoding = { git = "https://github.com/zondax/forest", tag="working" }
+vm = { git = "https://github.com/zondax/forest", tag="testnet3" }
+forest_message = { git = "https://github.com/zondax/forest", tag="testnet3" }
+forest_address = { git = "https://github.com/zondax/forest", tag="testnet3" }
+forest_encoding = { git = "https://github.com/zondax/forest", tag="testnet3" }
 
 # TODO: Maybe we can replace these with something leaner
 tiny-bip39 = "0.7.3"
-num_bigint_chainsafe = { package = "forest_bigint", git = "https://github.com/zondax/forest", tag="working"}
+num_bigint_chainsafe = { package = "forest_bigint", git = "https://github.com/zondax/forest", tag="testnet3"}
 
 bip44 = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
 
