--- a/examples/wasm_node/package.json
+++ b/examples/wasm_node/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "test:spec": "mocha test/test.spec.js",
+    "test:spec": "mocha test/test.spec.js"
   },
   "repository": {
     "type": "git",
