--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,11 +23,7 @@ jobs:
     steps:
       - checkout
       - restore-sccache-cache
-<<<<<<< HEAD
       - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev
-=======
-      - run: sudo apt-get update -y && sudo apt-get install -y ocl-icd-opencl-dev
->>>>>>> Install opencl in CI;
       - run:
           name: rustfmt
           command: |
@@ -51,11 +47,7 @@ jobs:
     steps:
       - checkout
       - restore-sccache-cache
-<<<<<<< HEAD
       - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev
-=======
-      - run: sudo apt-get update -y && sudo apt-get install -y ocl-icd-opencl-dev
->>>>>>> Install opencl in CI;
       - run:
           name: rust unit tests --all-features
           command: |
@@ -73,7 +65,7 @@ jobs:
       - run:
           name: External dependencies
           command: |
-            sudo apt-get install -y clang default-jdk g++ gcc gnustep gnustep-devel gobjc golang libicu-dev libtinfo5 valgrind ocl-icd-opencl-dev
+            sudo apt-get install -y clang default-jdk g++ gcc gnustep gnustep-devel gobjc golang libicu-dev libtinfo5 valgrind
       - run:
           name: Cbindgen
           command: |
@@ -103,7 +95,7 @@ jobs:
     docker:
       - image: zondax/rust-ci:latest
     steps:
-      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev ocl-icd-opencl-dev
+      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev
       - checkout
       - run: cargo --version
       - restore-sccache-cache
@@ -122,7 +114,7 @@ jobs:
     environment:
       BASH_ENV: "/opt/circleci/.nvm/nvm.sh"
     steps:
-      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev curl ocl-icd-opencl-dev
+      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev curl
       - run:
           name: Install rustup
           command: |
@@ -161,11 +153,8 @@ jobs:
     steps:
       - checkout
       - restore-sccache-cache
-<<<<<<< HEAD
+
       - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev curl
-=======
-      - run: sudo apt-get update -y && sudo apt-get install -y ocl-icd-opencl-dev
->>>>>>> Install opencl in CI;
       - run: cargo build
       - run:
           name: patch configuration file
