--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -4,7 +4,7 @@ description = "Library to integrate with the Ledger Filecoin app"
 version = "0.10.0"
 license = "Apache-2.0"
 authors = ["Zondax GmbH <info@zondax.ch>"]
-homepage = "https://github.com/ZondaX/ledger-filecoin-rs"
+homepage = "https://github.com/ZondaX/filecoin-rs"
 repository = "https://github.com/ZondaX/ledger-filecoin-rs"
 readme = "README.md"
 categories  = ["authentication", "cryptography"]
