--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.10.0"
 license = "Apache-2.0"
 authors = ["Zondax GmbH <info@zondax.ch>"]
 homepage = "https://github.com/ZondaX/filecoin-rs"
-repository = "https://github.com/ZondaX/ledger-filecoin-rs"
+repository = "https://github.com/ZondaX/filecoin-rs"
 readme = "README.md"
 categories  = ["authentication", "cryptography"]
 keywords = ["ledger", "nano", "apdu", "filecoin"]
