Feature/ledger wasm support (#134)
* Remove javscript ledger lib in favor of wasm call;
* Failing with zemu (#135)
* Working zemu test
* Working address call on ledger
* getting signature to work; importing Buffer type in WASM; exporting signature fields as Buffer;
* Working ledger wasm implementation
* Browser support
* Fix package.json and remove X11 option
* Update examples/wasm_browser/index.js
* Update ledger/Cargo.toml
* Update ledger/Cargo.toml

Co-authored-by: Juan Leni <juan.leni@zondax.ch>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
     steps:
       - checkout
       - restore-sccache-cache
+      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev
       - run:
           name: rustfmt
           command: |
@@ -46,6 +47,7 @@ jobs:
     steps:
       - checkout
       - restore-sccache-cache
+      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev
       - run:
           name: rust unit tests --all-features
           command: |
@@ -151,6 +153,7 @@ jobs:
     steps:
       - checkout
       - restore-sccache-cache
+      - run: sudo apt-get update -y && sudo apt-get install -y libusb-1.0.0 libudev-dev curl
       - run: cargo build
       - run:
           name: patch configuration file
