--- a/examples/wasm_node/package.json
+++ b/examples/wasm_node/package.json
@@ -7,9 +7,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "test:ledger": "mocha test/test.ledger.js",
-    "test:spec": "mocha test/test.spec.js",
-    "test:legacy": "mocha test/test.legacy.js"
+    "test:spec": "mocha test/test.spec.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +20,6 @@
     "filecoin"
   ],
   "dependencies": {
-    "@zondax/filecoin-signer": "../../signer-wasm/",
     "bip39": "^3.0.2"
   },
   "devDependencies": {
