--- a/ledger/Cargo.toml
+++ b/ledger/Cargo.toml
@@ -25,11 +25,8 @@ futures = "0.3.4"
 serde = { version = "1.0", features = ["derive"] }
 thiserror = "1.0.16"
 
-# Used for internal development
-#ledger-transport = { path = "../../ledger-rs/ledger-transport"}
-#bip44 = { path = "../../ledger-rs/bip44"}
-ledger-transport = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
-bip44 = { git = "https://github.com/Zondax/ledger-rs", branch = "feature/refactoring-wasm"}
+ledger-transport = { git = "https://github.com/Zondax/ledger-rs" }
+bip44 = { git = "https://github.com/Zondax/ledger-rs" }
 
 # For wasm compiling
 [target.'cfg(target_arch = "wasm32")'.dependencies]
