Use hex dependecy

--- a/service/Cargo.toml
+++ b/service/Cargo.toml
@@ -19,6 +19,7 @@ reqwest = { version = "0.10.1", features = ["json", "gzip"] }
 warp = "0.2.1"
 jsonrpc-core = "14.0.5"
 lru = "0.4.3"
+hex = "0.4"
 lazy_static = "1.4.0"
 libsecp256k1 = "0.3.4"
 blake2b_simd = "0.5.10"
