--- a/signer-ffi/Cargo.toml
+++ b/signer-ffi/Cargo.toml
@@ -1,6 +1,7 @@
 [dependencies]
-filecoin-signer = { features = ["with-ffi-support"], path = "../signer" }
 ffi-support = "0.4"
+filecoin-signer = { features = ["with-ffi-support"], path = "../signer" }
+hex = "0.4"
 jni = { optional = true, version = "0.16" }
 
 [features]
